optimization prod build yay

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -24,7 +24,7 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
-        # Handle React Router (SPA)
+        # Handle React Router (SPA) - serve from root since nginx routes to this container
         location / {
             try_files $uri $uri/ /index.html;
         }
