this aint gonna work

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -24,7 +24,13 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
-        # Handle React Router (SPA) - serve from root since nginx routes to this container
+        # Handle /beatmeat/ prefix and strip it
+        location /beatmeat/ {
+            alias /usr/share/nginx/html/;
+            try_files $uri $uri/ /beatmeat/index.html;
+        }
+        
+        # Handle root requests (fallback)
         location / {
             try_files $uri $uri/ /index.html;
         }
