--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - DB_PATH=/app/data/beatmeat.db
     volumes:
       # Mount database directory for persistence
-      - ./data:/app/data
+      - ./data/beat_meat:/app/data
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/')"]
